Removed PMDs.
SVN-Revision: 24197